@@ -75,18 +75,18 @@
                         'AC_LIB_PREPARE_PREFIX' => 1,
                         'AM_XGETTEXT_OPTION_INIT' => 1,
                         'AC_DEFUN' => 1,
+                        'AM_PROG_MKDIR_P' => 1,
                         'AM_GLIB_GNU_GETTEXT' => 1,
                         'gl_AC_HEADER_STDINT_H' => 1,
-                        'AM_PROG_MKDIR_P' => 1,
                         'AM_AUTOMAKE_VERSION' => 1,
                         'gl_SIZE_MAX' => 1,
                         'AM_MISSING_HAS_RUN' => 1,
                         'AC_LIB_RPATH' => 1,
                         'AC_TYPE_LONG_LONG_INT' => 1,
                         'AM_SUBST_NOTMAKE' => 1,
+                        'AM_PATH_GTK_2_0' => 1,
                         'AM_MISSING_PROG' => 1,
                         'gt_PRINTF_POSIX' => 1,
-                        'AM_PATH_GTK_2_0' => 1,
                         'IT_PO_SUBDIR' => 1,
                         'AM_GNU_GETTEXT_VERSION' => 1,
                         'AC_LIB_PROG_LD_GNU' => 1,
